# lab8

./: .travis.yml  CMakeLists.txt  Dockerfile  README.md
_3rdParty/Hunter/: install-root-dir
_3rdParty/Hunter/toolchain/: toolchain.info  toolchain.info.NOLF
_3rdParty/Hunter/toolchain/_builds/: CMakeCache.txt  Makefile  cmake_install.cmake
formatter_ex_lib/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
formatter_ex_lib/formatter_lib/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
formatter_ex_lib/formatter_lib/_build/: CMakeCache.txt  Makefile  cmake_install.cmake
solver_lib/: CMakeLists.txt  Makefile  cmake_install.cmake
